# ovirt-node-dbus-backend

./: .gitignore  Makefile.am  README.md  TESTING  autogen.sh  configure.ac  ovirt-node-dbus-backend.spec.in
automation/: build-artifacts.req  build-artifacts.sh  check-merged.req  check-patch.sh
dbus/: Makefile.am  org.ovirt.node.conf
src/: Makefile.am  __init__.py  factory.py  log.py  service.py  testers.py  unit_test.py  wrappers.py
systemd/: Makefile.am  node-dbus.service
